[tool.poetry]
name = "first"
version = "0.1.0"
description = ""
authors = ["1437 <ichigo8106gr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "0.4.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ipython = "^8.22.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
